Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-1997

[Python] to_pandas with strings_to_categorical fails

    XMLWordPrintableJSON

Details

    Description

      Repro code.

      Seems that unexpected deallocation occured.

      import pandas as pd
      import pyarrow as pa
      
      df = pd.DataFrame({
      'Foo': ['A', 'A', 'B', 'B']
      })
      
      table = pa.Table.from_pandas(df)
      
      df = table.to_pandas(strings_to_categorical=True)
      

      Attachments

        Issue Links

          Activity

            People

              Licht-T Licht Takeuchi
              Licht-T Licht Takeuchi
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: